-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 13
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8225982 | 14 | Zhengyu Gu | P4 | Resolved | Fixed | team |
The method changes thread frames.
- backported by
-
JDK-8225982 Shenandoah: CM::update_thread_roots() needs to handle derived pointers
-
- Resolved
-
- relates to
-
JDK-8223951 Shenandoah: Only need to update thread roots during final update refs
-
- Resolved
-