8225341: Shenandoah: CM::update_thread_roots() needs to handle derived pointers

Reviewed-by: shade